<resources>
    <string name="app_name">WakeUp!</string>
    <string name="container">Your weather forecast</string>
    <string name="name_hint">Enter task name</string>
    <string name="name_label">Name</string>
    <string name="details_label">Details</string>
    <string name="done_label">Finished</string>
    <string name="task_add_new">New task</string>
    <string name="NewsTitle">Interesting today\'s news:</string>
    <string name="alarm">Alarm</string>
    <string name="calendar">Calendar</string>
    <string name="home">Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="news_click">Click on the news to see the source</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="due_date">Due Date</string>
    <string name="no_date_selected">No date selected</string>
    <string name="due_hour">Due hour</string>
    <string name="no_hour_selected">No hour selected</string>
    <string name="remind_me">Remind me</string>
    <string name="add">Add</string>
    <string name="edit_task">Edit task</string>
    <string name="edit">Edit</string>
    <string name="add_task">Add task</string>
    <string name="menu_title">Choose action</string>
    <string name="menuItem1">In progress</string>
    <string name="menuItem2">Done</string>
    <string name="menuItem3">Delete</string>
    <string name="editingFinishedTask">Cannot edit finished task</string>
    <string name="your_current_location">Your current location </string>
    <string name="channelName" translatable="false">taskChannel</string>
    <string name="weather">Weather</string>
    <string name="clear_sky">Clear sky </string>
    <string name="mainly_clear_sky">Mainly clear sky </string>
    <string name="sky_partially_cloudy">Sky partially cloudy </string>
    <string name="cloudy">Cloudy </string>
    <string name="fog">Fog </string>
    <string name="freezing_fog">Freezing fog </string>
    <string name="light_drizzle">Light drizzle </string>
    <string name="moderate_drizzle">Moderate drizzle </string>
    <string name="heavy_drizzle">Heavy drizzle </string>
    <string name="light_freezing_drizzle">Light freezing drizzle </string>
    <string name="heavy_freezing_drizzle">Heavy freezing drizzle </string>
    <string name="slight_rain">Slight rain </string>
    <string name="moderate_rain">Moderate rain </string>
    <string name="heavy_rain">Heavy rain </string>
    <string name="night_weathercode_decorator">  during the night \n</string>
    <string name="day_temperature_decorator"> °C during the day \n</string>
    <string name="humidity_during_the_day"> % humidity during the day \n</string>
    <string name="temperature_during_night"> °C during the night \n</string>
    <string name="pressure_during_day"> hPa during the day \n</string>
    <string name="pressure_during_night"> hPa during the night \n</string>
    <string name="day_weathercode_decorator">  during the day \n</string>
    <string name="slight_freezing_rain">Slight freezing rain </string>
    <string name="intense_freezing_rain">Intense freezing rain </string>
    <string name="slight_snow_fall">Slight snow fall </string>
    <string name="moderate_snow_fall">Moderate snow fall </string>
    <string name="heavy_snow_fall">Heavy snow fall </string>
    <string name="blizzard">Blizzard </string>
    <string name="slight_rain_shower">Slight rain shower </string>
    <string name="moderate_rain_shower">Moderate rain shower </string>
    <string name="violent_rain_shower">Violent rain shower </string>
    <string name="slight_snow_shower">Slight snow shower </string>
    <string name="heavy_snow_shower">Heavy snow shower </string>
    <string name="slight_thunderstorm">Slight thundersorm </string>
    <string name="slight_thunderstorm_hail">Thunderstorm slight hail </string>
    <string name="heavy_thunderstorm_hail">Thunderstorm heavy hail </string>
    <string name="missing_weather_information">Missing weather information</string>
    <string name="humidity_during_the_night">" % humidity during the night \n</string>
</resources>