<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:padding="16dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title">
    </TextView>

    <EditText
        android:id="@+id/new_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text" />

    <TextView
        android:id="@+id/details_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/details">
    </TextView>

    <EditText
        android:id="@+id/new_task_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/details"
        android:inputType="text" />

    <TextView
        android:id="@+id/due_date_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/due_date"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/due_date_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_date_selected" />

    <TextView
        android:id="@+id/due_hour_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/due_hour"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/due_hour_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_hour_selected" />

    <CheckBox
        android:id="@+id/has_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remind_me" />

    <Button
        android:id="@+id/btn_add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#4CAF50"
        android:text="@string/add"
        android:textColor="#fff"
        android:textSize="16sp" />

</LinearLayout>